[gd_scene load_steps=3 format=3 uid="uid://dd5rmxppxbmtc"]

[ext_resource type="Script" path="res://Project54B.gd" id="1_kb702"]

[sub_resource type="LabelSettings" id="LabelSettings_uoori"]
font_size = 25

[node name="Project54B" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kb702")

[node name="Calculate" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 320.0
grow_vertical = 0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -128.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
text = "Quit"

[node name="LabelOutput" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_uoori")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Num1Output" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -320.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2
text = "Number 1:"
label_settings = SubResource("LabelSettings_uoori")
vertical_alignment = 1

[node name="Num2Output2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -124.0
offset_right = -320.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Number 2:"
label_settings = SubResource("LabelSettings_uoori")
vertical_alignment = 1

[node name="Num3Output" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -324.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2
text = "Number 3:"
label_settings = SubResource("LabelSettings_uoori")
vertical_alignment = 1

[node name="Num4Output" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -132.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Number 4:"
label_settings = SubResource("LabelSettings_uoori")
vertical_alignment = 1

[node name="Num1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 144.0
offset_right = 272.0
offset_bottom = 128.0

[node name="Num2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 192.0
offset_right = 272.0
offset_bottom = 320.0

[node name="Num3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 192.0
offset_right = 592.0
offset_bottom = 320.0

[node name="Num4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 464.0
offset_right = 592.0
offset_bottom = 128.0

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
